prevent wordbreak in middle of word in chat. regresses on ie for longer words or links?'
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@18932 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_chat.scss
+++ b/src/main/resources/scss/_chat.scss
@@ -298,9 +298,15 @@
 					font-size: 10pt;
 					font-weight: 700;
 					color: #ffffff;
+
+					// break-word for most browsers works fine, but need to insert
+					// hyphens for longer bits of text, and ms workaround
 					word-wrap: break-word;
-					word-break: break-all;//IE9
-					word-break: break-word;
+					word-break: normal;
+					word-break: break-word; // safari
+					// if long words/links still a problem in ie, uncomment:
+					//-ms-word-break: break-all;
+					@include hyphens(auto);
 				}
 			}
 		}
